--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="@color/light"
     android:padding="10dp">
 
     <androidx.recyclerview.widget.RecyclerView
