--- a/app/src/main/res/layout/activity_row.xml
+++ b/app/src/main/res/layout/activity_row.xml
@@ -4,30 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="10dp"
+    android:padding="2dp"
     android:layout_margin="5dp"
-    android:background="@drawable/input_bg"
-    android:id="@+id/linearlayout">
+    android:id="@+id/linearlayout"
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:background="@drawable/input_bg">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="5dp"
-            android:layout_margin="5dp">
+            android:layout_margin="8dp">
 
             <TextView
                 android:id="@+id/txt_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:textSize="18dp"
+                android:textSize="16dp"
                 android:text="Null"/>
 
             <TextView
