--- a/app/src/main/res/layout/activity_row.xml
+++ b/app/src/main/res/layout/activity_row.xml
@@ -28,8 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:textSize="16dp"
-                android:text="Null"/>
+                android:textSize="16dp" />
 
             <TextView
                 android:id="@+id/txt_name"
@@ -37,7 +36,6 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/purple_500"
                 android:textSize="14dp"
-                android:text="Null"
                 android:layout_marginTop="10dp"/>
 
             <TextView
@@ -46,8 +44,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/cardview_dark_background"
                 android:textSize="14dp"
-                android:layout_marginTop="5dp"
-                android:text="Null"/>
+                android:layout_marginTop="5dp" />
 
         </LinearLayout>
 
