--- a/app/src/main/res/layout/activity_row.xml
+++ b/app/src/main/res/layout/activity_row.xml
@@ -27,7 +27,7 @@
 
         <TextView
             android:id="@+id/txt_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/red"
             android:textSize="14dp"
@@ -35,7 +35,7 @@
 
         <TextView
             android:id="@+id/txt_date"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/cardview_dark_background"
             android:textSize="14dp"
@@ -43,7 +43,7 @@
 
         <TextView
             android:id="@+id/txt_link"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/purple_200"
             android:textSize="14dp"
