--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -3,12 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".DetailsActivity"
     android:orientation="vertical"
     android:padding="8dp"
     android:layout_margin="5dp"
-    android:background="@color/white">
+    android:background="@drawable/input_bg">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:text="News Details"
+        android:textSize="19dp"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/txt_title1"
@@ -16,7 +25,14 @@
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:textSize="16dp"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="20dp"/>
+
+    <ImageView
+        android:id="@+id/img_news"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"/>
 
     <TextView
         android:id="@+id/txt_aut1"
