--- a/app/src/main/res/layout/activity_row.xml
+++ b/app/src/main/res/layout/activity_row.xml
@@ -18,6 +18,13 @@
         android:gravity="center_vertical"
         android:background="@drawable/input_bg">
 
+        <ImageView
+            android:id="@+id/img_new"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"/>
+
         <TextView
             android:id="@+id/txt_title"
             android:layout_width="match_parent"
