--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -6,64 +6,88 @@
     android:layout_height="wrap_content"
     tools:context=".DetailsActivity"
     android:orientation="vertical"
-    android:padding="8dp"
     android:layout_margin="5dp"
-    android:background="@drawable/input_bg">
+    android:gravity="center">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:text="News Details"
         android:textSize="19dp"
         android:layout_marginTop="10dp"
-        android:layout_gravity="center"/>
+        android:padding="5dp"
+        android:gravity="center"
+        android:background="@color/cardview_light_background"/>
 
-    <TextView
-        android:id="@+id/txt_title1"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/img_news"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"/>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical">
 
-    <TextView
-        android:id="@+id/txt_aut1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/red"
-        android:textSize="14dp"
-        android:layout_marginTop="10dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_margin="5dp"
+                android:padding="8dp">
 
-    <TextView
-        android:id="@+id/txt_link1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/purple_200"
-        android:textSize="14dp"
-        android:layout_marginTop="10dp" />
+                <TextView
+                    android:id="@+id/txt_title1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="16dp"
+                    android:layout_marginTop="20dp"/>
 
-    <TextView
-        android:id="@+id/txt_time1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/cardview_dark_background"
-        android:textSize="14dp"
-        android:layout_marginTop="10dp" />
+                <ImageView
+                    android:id="@+id/img_news"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"/>
 
-    <TextView
-        android:id="@+id/txt_dec1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textSize="14dp"
-        android:layout_marginTop="10dp"/>
+                <TextView
+                    android:id="@+id/txt_aut1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/red"
+                    android:textSize="14dp"
+                    android:layout_marginTop="10dp" />
+
+                <TextView
+                    android:id="@+id/txt_link1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/purple_200"
+                    android:textSize="14dp"
+                    android:layout_marginTop="10dp" />
+
+                <TextView
+                    android:id="@+id/txt_time1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/cardview_dark_background"
+                    android:textSize="14dp"
+                    android:layout_marginTop="10dp" />
+
+                <TextView
+                    android:id="@+id/txt_dec1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="14dp"
+                    android:layout_marginTop="10dp"/>
+
+            </LinearLayout>
+
+        </ScrollView>
+
+    </LinearLayout>
 
 </LinearLayout>
